Started working on navbar.

--- a/src/app/src/app/pages/app-pages.component.html
+++ b/src/app/src/app/pages/app-pages.component.html
@@ -1,12 +1,8 @@
 <div class="app-container">
-  <div class="header">
-    Header
-    <br>
-    <a routerLink="/">Home</a>
-    <a routerLink="/categories">Categories</a>
-  </div>
+  <app-header-component></app-header-component>
   <div class="app-content">
     <router-outlet></router-outlet>
   </div>
-  <div class="footer">Footer</div>
+
+  <!--FOOTER HERE-->
 </div>
