--- a/src/app/src/app/header/header.component.html
+++ b/src/app/src/app/header/header.component.html
@@ -1,27 +1,92 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--
+<div class="header">
+  Header
+  <a routerLink="/track-order">Track Order</a>
+  <a routerLink="/my-account">My Account</a>
+  <br>
+  <hr>
 
-<nav class="navbar navbar-light" style="background-color: darkgray;">
-  <div class="container-fluid">
+  <a routerLink="/">Home</a>
+  <a routerLink="/categories">Categories</a>
+  <a routerLink="/inventory">Shop</a>
+  <a routerLink="/contact-us">Contact Us</a>
+
+</div>
+<div class="app-content">
+  <router-outlet></router-outlet>
+</div>
+<br>
+<br>
+<br>
+<div class="footer">Footer</div>
+
+-->
+<!--<nav class="navbar navbar-default">
+<div class="navbar navbar-fixed-top">
+  <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">DenSH</a>
+      <a class="navbar-brand" routerLink="/">DenSH<i class="material-icons">favorite_border</i>P</a>
     </div>
-
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar">
-        <li class="icon-bar"><a href="#" title="Shop"><i class="material-icons">store</i> Shop</a></li>
-        <li class="icon-bar"><a href="#" title="Store Locator"><i class="material-icons">my_location</i> Store Locator</a></li>
-        <li class="icon-bar"><a href="#" title="Track Your Order"><i class="material-icons">local_shipping</i> Track Your Order</a></li>
-      </ul>
-
+    <div class="navbar-inverse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="icon-bar dropdown"><a href="#" class="dropdown-toggle" role="button"  title="My Account"><i class="material-icons">account_circle</i> My Account <span class="caret"></span></a></li>
-        <li class="icon-bar"><a href="#" title="Change Language"><i class="material-icons">language</i> Language</a></li>
-        <li class="icon-bar"><a href="#" title="Change Currency"><i class="material-icons">attach_money</i> Currency</a></li>
+    <li><a routerLink="/track-order">Track Your Order</a></li>
+    <li><a routerLink="/my-account">My-account</a></li></ul>
+        </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a routerLink="/">Home</a></li>
+        <li><a routerLink="/categories">Categories</a></li>
+        <li><a routerLink="/inventory">Shop</a></li>
       </ul>
-
     </div>
-
   </div>
+</div>
+</nav> -->
 
+<!--<div class="container">
+  <div class="page-header">
+    <div class="navbar-right">
+    <ul>
+    <li><a routerLink="/track-order">Track Your Order</a></li>
+    <li><a routerLink="/my-account">My-account</a></li>
+    </ul>
+    </div>
+  </div>
+</div>-->
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">Welcome to DenSH</a>
+
+  <div class="navbar-header navbar-right">
+    <ul class="nav navbar-nav">
+      <li><a routerLink="/track-order">Track Your Order</a></li>
+      <li><a routerLink="/my-account">My-account</a></li>
+    </ul>
+  </div>
+  </div>
 </nav>
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav>-->
+
 
