Added header. Added footer.

--- a/src/app/src/app/pages/app-pages.component.html
+++ b/src/app/src/app/pages/app-pages.component.html
@@ -3,6 +3,8 @@
   <div class="app-content">
     <router-outlet></router-outlet>
   </div>
-
-  <!--FOOTER HERE-->
+  <app-footer-component></app-footer-component>
 </div>
+
+
+
