--- a/src/app/src/app/pages/home/home-page.component.html
+++ b/src/app/src/app/pages/home/home-page.component.html
@@ -1,1 +1,15 @@
-Home
+<div class="container mt-3">
+  <div class="d-flex bg-light justify-content-center align-items-center" style="height: 300px">
+  <h3><a routerLink="/inventory">Future Products</a></h3>
+  </div>
+</div>
+<div class="container mt-3">
+  <div class="d-flex bg-light justify-content-center align-items-center" style="height: 300px">
+  <h3><a routerLink="/about-us">Company info</a></h3>
+  </div>
+</div>
+<div class="container mt-3 my-3">
+  <div class="d-flex bg-light justify-content-center align-items-center" style="height: 300px">
+  <h3><a routerLink="/categories">Categories</a></h3>
+  </div>
+</div>
