--- a/src/app/src/app/pages/my-account/my-account-page.component.html
+++ b/src/app/src/app/pages/my-account/my-account-page.component.html
@@ -1,1 +1,14 @@
-My Account
+<div class="container">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb my-2 px-0 bg-white">
+      <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page"><a href="/my-account">My Account</a> </li>
+    </ol>
+  </nav>
+</div>
+
+<div class="container mb-3">
+  <div class="d-flex bg-light justify-content-center align-items-center" style="height: 1500px; width: auto; margin-left: -100px; margin-right: -100px">
+    <h3>My Account</h3>
+  </div>
+</div>
