--- a/src/app/src/app/header/header.component.html
+++ b/src/app/src/app/header/header.component.html
@@ -1,92 +1,152 @@
-<!--
 <div class="header">
-  Header
-  <a routerLink="/track-order">Track Order</a>
-  <a routerLink="/my-account">My Account</a>
-  <br>
-  <hr>
-
-  <a routerLink="/">Home</a>
-  <a routerLink="/categories">Categories</a>
-  <a routerLink="/inventory">Shop</a>
-  <a routerLink="/contact-us">Contact Us</a>
-
+  <a routerLink="/">Welcome To DenSH</a>
+  <div class="float-right">
+    <a routerLink="/track-order" [routerLinkActive]="'active-link'">Track Your Order</a>
+    <a routerLink="/my-account" [routerLinkActive]="'active-link'">My-account</a>
+  </div>
 </div>
-<div class="app-content">
-  <router-outlet></router-outlet>
-</div>
-<br>
-<br>
-<br>
-<div class="footer">Footer</div>
 
--->
-<!--<nav class="navbar navbar-default">
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
   <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" routerLink="/">DenSH<i class="material-icons">favorite_border</i>P</a>
-    </div>
-    <div class="navbar-inverse">
-      <ul class="nav navbar-nav navbar-right">
-    <li><a routerLink="/track-order">Track Your Order</a></li>
-    <li><a routerLink="/my-account">My-account</a></li></ul>
+    <div class="logo"><a cla routerLink="/"><img style="width: 50px; height: 50px" [src]="'/assets/logo.svg'"></a></div>
+
+    <a routerLink="/">Home</a>
+    <a routerLink="/categories" [routerLinkActive]="'active-link'">Categories</a>
+    <a routerLink="/inventory" [routerLinkActive]="'active-link'">Shop</a>
+    <a routerLink="/contact-us" [routerLinkActive]="'active-link'">Contact Us</a>
+
+    <div class="support">
+      <div class="support__container d-flex align-items-center">
+        <img class="support__img" [src]="'/assets/support.svg'">
+        <div class="support__text">
+          <b>Support</b> (+380) 78 120 634
+          <br>
+          <b>E-mail:</b> info@densh.com
         </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a routerLink="/">Home</a></li>
-        <li><a routerLink="/categories">Categories</a></li>
-        <li><a routerLink="/inventory">Shop</a></li>
-      </ul>
+      </div>
+    </div>
+
+  </div>
+</div>
+<form class="search">
+  <div class="form-box">
+    <input type="text" class="search-field business" placeholder="Enter you are looking for">
+    <button class="search-btn" type="button">Search</button>
+  </div>
+</form>
+
+
+<div class="d-flex  border-bottom">
+  <div class="container-fluid bg-light ">
+    <div class="row">
+      <div class="col-12">
+        <ul class="float-left">
+          <li class="top__menu "><a class="menu__links" routerLink="#">Welcome to DenSH Store</a></li>
+        </ul>
+       <ul class="float-right ">
+        <li class="top__menu "><a class="menu__links" routerLink="/track-order">Track Your Order</a></li>
+        <li class="top__menu"><a class="menu__links" routerLink="/my-account">My Account</a></li>
+       </ul>
+      </div>
     </div>
   </div>
 </div>
-</nav> -->
 
+<div class="d-flex">
+  <div class="container-fluid bg-dark text-white">
+    <div class="row">
+      <div class="col-12">
+        <ul class="float-left">
+          <li> <a>LOGO</a></li>
+        </ul>
+        <ul class="float-right">
+          <li><a>Link 1</a></li>
+          <li><a>Link 2</a></li>
+          <li><a>Link 3</a></li>
+          <li><a>Link 4</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--
+
+<div class="col-3 navbar-brand ">
+  <a href="#"><img [src]="'/assets/logo.png'" style="height: 30px; width: 30px"><span style="padding-left: 10px">Den</span><span>SH</span> </a>
+</div>
+<div class="col-2 align-self-center"><a href="#">HOME</a></div>
+<div class="col-2 align-self-center"><a href="#">HOME</a></div>
+<div class="col-2 align-self-center"><a href="#">HOME</a></div>
+<div class="col-2 align-self-center"><a href="#">HOME</a></div>
+
+-->
+
+<!--
+<div class="container">
+  <div class="row">
+      <div class="col-12 navbar-brand">
+        <img [src]="'/assets/logo.png'" style="width: 30px; height: 30px">
+        <span style="color: blue">Den</span><span style="color: #ffe812">SH</span>
+      </div>
+        <ul class="float-right">
+          <li class="top__menu"><a class="menu__links">Home 1</a> </li>
+          <li class="top__menu"><a class="menu__links">Home sda1</a> </li>
+          <li class="top__menu"><a class="menu__links">Home asdasd1</a> </li>
+          <li class="top__menu"><a class="menu__links">Home asd1</a> </li>
+        </ul>
+      </div>
+    </div>-->
+
+
+
+
+<!--
+ Responsive Menu Trying
+-->
 <!--<div class="container">
-  <div class="page-header">
-    <div class="navbar-right">
-    <ul>
-    <li><a routerLink="/track-order">Track Your Order</a></li>
-    <li><a routerLink="/my-account">My-account</a></li>
-    </ul>
+  <div class="row">
+    <div class="col-12">
+      <br/>
+      <nav class="navbar navbar-dark bg-dark">
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse"
+        data-target="#CollapseNavbar">
+          &#9776;
+        </button>
+        <div class="collapse" id="CollapseNavbar">
+          <a class="navbar-brand">LOGO</a>
+          <ul class="nav navbar-nav">
+            <li class="nav-item">Home 1</li>
+            <li class="nav-item">Home 2</li>
+            <li class="nav-item">Home 3</li>
+          </ul>
+        </div>
+      </nav>
     </div>
   </div>
 </div>-->
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">Welcome to DenSH</a>
 
-  <div class="navbar-header navbar-right">
-    <ul class="nav navbar-nav">
-      <li><a routerLink="/track-order">Track Your Order</a></li>
-      <li><a routerLink="/my-account">My-account</a></li>
-    </ul>
+<!--
+Responsive menu
+-->
+<!--
+
+<div class="mobile-header d-block">
+  <div class="collapse" id="collapsingMenuToggle">
+    <div class="d-flex">
+      <div class="row align-self-center">
+        <div class="col-3"><a routerLink="/" class="font-weight-500 text-decoration-none">Home</a></div>
+        <div class="col-3"><a routerLink="/" class="font-weight-500 text-decoration-none">Home</a></div>
+        <div class="col-3"><a routerLink="/" class="font-weight-500 text-decoration-none">Home</a></div>
+        <div class="col-3"><a routerLink="/" class="font-weight-500 text-decoration-none">Home</a></div>
+      </div>
+    </div>
   </div>
-  </div>
-</nav>
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+</div>
+<nav class="navbar navbar-light border-bottom">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingMenuToggle" aria-controls="collapsingMenuToggle" aria-expanded="false" aria-label="Toggle navigator">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav>-->
-
-
+</nav>
+-->
