--- a/src/app/src/app/pages/categories/categories-page.component.html
+++ b/src/app/src/app/pages/categories/categories-page.component.html
@@ -1,1 +1,46 @@
-Categories
+<div class="container">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb my-2 px-0 bg-white">
+      <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page"><a href="/categories">Categories</a> </li>
+    </ol>
+  </nav>
+</div>
+
+<ul class="categories-list">
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Category 1</a>
+    <div class="dropdown-content">
+      <a href="#">Category 1.1</a>
+      <a href="#">Category 1.2</a>
+      <a href="#">Category 1.3</a>
+    </div>
+  </li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Category 2</a>
+    <div class="dropdown-content">
+      <a href="#">Category 2.1</a>
+      <a href="#">Category 2.2</a>
+      <a href="#">Category 2.3</a>
+    </div>
+  </li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Category 3</a>
+    <div class="dropdown-content">
+      <a href="#">Category 3.1</a>
+      <a href="#">Category 3.2</a>
+      <a href="#">Category 3.3</a>
+    </div>
+  </li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Category 4</a>
+    <div class="dropdown-content">
+      <a href="#">Category 4.1</a>
+      <a href="#">Category 4.2</a>
+      <a href="#">Category 4.3</a>
+    </div>
+  </li>
+</ul>
+<div>
+  <img class="categories-image" [src]="'/assets/gadgets.jpeg'">
+</div>
