--- a/src/app/src/app/pages/track-order/track-order-page.component.html
+++ b/src/app/src/app/pages/track-order/track-order-page.component.html
@@ -1,1 +1,21 @@
-Track Order
+<div class="container">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb my-2 px-0 bg-white">
+      <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page"><a href="/track-your order">Track Your Order</a> </li>
+    </ol>
+  </nav>
+</div>
+
+<div class="container mb-3">
+  <div class="d-flex bg-light justify-content-around"  style="height: 300px; width: auto; margin-left: -100px; margin-right: -100px">
+    <h3>Track Your Order</h3>
+    <div class="">
+      <form class="order-track">
+        <input type="text" placeholder="Enter Your Order ID">
+        <button class="track" [formAction]="'/home'">Track</button>
+      </form>
+    </div>
+  </div>
+  </div>
+
