Commited test changes.

--- a/src/app/src/app/header/header.component.html
+++ b/src/app/src/app/header/header.component.html
@@ -1,14 +1,13 @@
-<div class="header">
   <a routerLink="/">Welcome To DenSH</a>
   <div class="float-right">
     <a routerLink="/track-order" [routerLinkActive]="'active-link'">Track Your Order</a>
     <a routerLink="/my-account" [routerLinkActive]="'active-link'">My-account</a>
   </div>
-</div>
+
 
 <div class="navbar">
   <div class="container">
-    <div class="logo"><a cla routerLink="/"><img style="width: 50px; height: 50px" [src]="'/assets/logo.svg'"></a></div>
+    <div class="logo"><a routerLink="/"><img style="width: 50px; height: 50px" [src]="'/assets/logo.svg'"></a></div>
 
     <a routerLink="/">Home</a>
     <a routerLink="/categories" [routerLinkActive]="'active-link'">Categories</a>
