Modified footer. Modified Header. Added Categories page. Added Shop page. Added Contact Us page. Added Cart page.

--- a/src/app/src/app/footer/footer.component.html
+++ b/src/app/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="footer-newsletter">
   <div class="container text-center py-2">
     <span class="text-black ">Additional information</span>
@@ -73,4 +74,95 @@
   </div>
 </div>
 
+
+-->
+
+<!-- Footer -->
+
+<div class="page-footer bg-light">
+  <div class="container text-center text-md-left mt-5">
+    <div class="row">
+      <div class="col-md-4 mx-auto">
+        <h5 class="font-weight-bold mt-3 mb-4">Footer Content</h5>
+        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit.</p>
+      </div>
+      <div class="col-md-2 mx-auto">
+        <h5 class="font-weight-bold mt-3 mb-4">Categories</h5>
+        <ul class="list-inline">
+          <li>
+            <a href="#">Link 1</a>
+          </li>
+          <li>
+            <a href="#">Link 2</a>
+          </li>
+          <li>
+            <a href="#">Link 3</a>
+          </li>
+          <li>
+            <a href="#">Link 4</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-2 mx-auto">
+        <h5 class="font-weight-bold mt-3 mb-4">Support</h5>
+        <ul class="list-unstyled">
+          <li>
+            <a href="#">Link 1</a>
+          </li>
+          <li>
+            <a href="#">Link 2</a>
+          </li>
+          <li>
+            <a href="#">Link 3</a>
+          </li>
+          <li>
+            <a href="#">Link 4</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-md-2 mx-auto">
+
+        <h5 class="font-weight-bold mt-3 mb-4">Useful Links</h5>
+        <ul class="list-unstyled">
+          <li>
+            <a href="#">Link 1</a>
+          </li>
+          <li>
+            <a href="#">Link 2</a>
+          </li>
+          <li>
+            <a href="#">Link 3</a>
+          </li>
+          <li>
+            <a href="#">Link 4</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <ul class="list-inline text-center">
+    <li class="list-inline-item">
+      <h5 class="mb-1">Register for free</h5>
+    </li>
+    <li class="list-inline-item">
+      <a href="/my-account" class="btn btn-danger btn-rounded">Sign up!</a>
+    </li>
+  </ul>
+
+
+  <hr>
+
+  <div class="footer-copyright text-center">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/education/bootstrap/"> DenSH.com</a>
+    <div class="ml-4">
+    <img src="https://demo2.madrasthemes.com/electro-wide/wp-content/uploads/2017/02/patment-icon.png"/>
+    </div>
+  </div>
+
+</div>
 
