--- a/src/app/src/app/pages/categories/categories-page.component.scss
+++ b/src/app/src/app/pages/categories/categories-page.component.scss
@@ -1,3 +1,4 @@
+/*
 .categories-list {
   list-style-type: none;
   margin: 0;
@@ -54,3 +55,7 @@
   height: 600px;
 margin-left: 200px;
 }
+*/
+
+
+
