--- a/src/app/src/app/pages/contact-us/contact-us-page.component.html
+++ b/src/app/src/app/pages/contact-us/contact-us-page.component.html
@@ -1,14 +1,90 @@
-<div class="container">
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-2 px-0 bg-white">
-      <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/contact-us">Contact Us</a> </li>
-    </ol>
-  </nav>
-</div>
-
-<div class="container">
-  <div class="d-flex bg-light justify-content-center align-items-center" style="height: 1500px; width: auto; margin-left: -100px; margin-right: -100px">
-    <h3>Contact Us</h3>
+<section>
+  <div class="container border-bottom">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h3>We are always here to help. If you have any questions, please contact us.</h3>
+      </div>
+    </div>
   </div>
-</div>
+</section>
+
+<section>
+  <div class="container-fluid">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3777.987407558813!2d98.9933669!3d18.7540995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTjCsDQ1JzE0LjciTiA5OMKwNTknNDQuMCJF!5e0!3m2!1sid!2s!4v1469346687955"  width="100%" height="450px" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  </div>
+</section>
+
+<section class="form-section mt-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h5 class="border-bottom border-primary">Leave Us a Message</h5>
+        <form action="">
+          <div class="form-row mt-4">
+            <div class="form-group col-md-6">
+              <input type="text" class="form-control" placeholder="First name *">
+            </div>
+            <div class="form-group col-md-6">
+              <input type="text" class="form-control" placeholder="Last name *">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <input type="phone" class="form-control" placeholder="Contact Phone *">
+            </div>
+            <div class="form-group col-md-6">
+              <input type="email" class="form-control" placeholder="E-mail Address *">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <select class="form-control" name="" id="">
+                <option selected>Subject of issue</option>
+                <option>Option_1</option>
+                <option>Option_2</option>
+                <option>Option_3</option>
+                <option>Option_4</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <textarea class="form-control" rows="5"></textarea>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-12 text-center">
+              <button type="submit" class="btn btn-primary"><i class="material-icons">send</i>Send Message</button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="col-md-4 address ">
+        <h5 class="border-bottom border-primary">Our Store</h5>
+          <h5 class="mt-3"> Call Us / WhatsApp</h5>
+          <p>
+            <a href="tel:+38072312333"><i class="material-icons" style="margin-right: 3px">perm_phone_msg</i> +380-723-123-33 </a>
+          </p>
+          <h5>Email / Website</h5>
+          <p>
+            <a href="mailto:densh@info.com"><i class="material-icons" style="margin-right: 5px">email</i>densh@info.com</a>
+            <br>
+            <a href="https://densh.com"><i class="material-icons" style="margin-right: 5px">web</i>https://densh.com</a>
+          </p>
+          <h5>Working Hours:</h5>
+          <p>
+            Mon - Fri : 9am - 6pm <br>
+            Sat - Sun : 11am - 15pm
+          </p>
+          <h5>Address</h5>
+          <p>
+            17 Princess Road
+            London, Greater London
+            NW1 8JR, UK
+          </p>
+        </div>
+      </div>
+    </div>
+
+</section>
