--- a/src/app/src/app/pages/my-account/my-account-page.component.html
+++ b/src/app/src/app/pages/my-account/my-account-page.component.html
@@ -2,13 +2,57 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb my-2 px-0 bg-white">
       <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/my-account">My Account</a> </li>
+      <li class="breadcrumb-item active" aria-current="page"><a href="/my-account">My Account</a></li>
     </ol>
   </nav>
 </div>
 
-<div class="container mb-3">
-  <div class="d-flex bg-light justify-content-center align-items-center" style="height: 1500px; width: auto; margin-left: -100px; margin-right: -100px">
-    <h3>My Account</h3>
+<section class="form-section mt-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h4 class="text-left border-bottom border-primary">Login</h4>
+        <form action="">
+          <div class="form-row mt-4">
+            <p>Welcome back! Sign in to your account.</p>
+            <div class="form-group col-md-12">
+              <h6>E-mail Address</h6>
+              <input type="email" class="form-control" placeholder="E-mail Address *">
+            </div>
+            <div class="form-group col-md-12">
+              <h6>Password</h6>
+              <input type="password" class="form-control" placeholder="Password *">
+            </div>
+          </div>
+          <div class="form-group col-md-4 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label">Remember me</label>
+          </div>
+          <button type="submit" class="btn btn-primary mb-3">Submit</button>
+        </form>
+      </div>
+
+      <div class="col-md-6">
+        <h4 class="text-left border-bottom border-primary">Register</h4>
+        <form action="">
+          <div class="form-row mt-4">
+            <p>Create new account today to reap the benefits of a personalized shopping experience.</p>
+            <div class="form-group col-md-12">
+              <h6>E-mail Address</h6>
+              <input type="email" class="form-control" placeholder="E-mail Address *">
+            </div>
+            <p>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy.</p>
+          </div>
+          <button type="submit" class="btn btn-primary mb-3">Register</button>
+        </form>
+        <ul class="float-left">
+          Sign up today and you will be able to :
+          <li>Speed your way through checkout</li>
+          <li>Track your orders easily</li>
+          <li>Keep a record of all your purchases</li>
+        </ul>
+      </div>
+
+    </div>
   </div>
-</div>
+</section>
