--- a/src/app/src/app/pages/categories/categories-page.component.html
+++ b/src/app/src/app/pages/categories/categories-page.component.html
@@ -96,9 +96,9 @@
   <div class="row">
     <div class="col-12 col-md-4 mt-3" *ngFor="let item of categories">
       <div class="card border border-danger">
-        <img class="card-img-top img-thumbnail" [src]="item.imageUrl" alt="Card image cap">
+        <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">{{item.title}}</h5>
+            <h5 class="card-title">{{item.title}}</h5>
           <p class="card-text">{{item.description}}</p>
           <a routerLink="/inventory" class="btn btn-sm btn-primary">Go somewhere</a>
         </div>
