--- a/src/app/src/app/pages/contact-us/contact-us-page.component.html
+++ b/src/app/src/app/pages/contact-us/contact-us-page.component.html
@@ -55,7 +55,7 @@
           </div>
           <div class="form-row">
             <div class="form-group col-md-12 text-center">
-              <button type="submit" class="btn btn-primary"><i class="material-icons">send</i>Send Message</button>
+              <button type="submit" class="btn btn-primary btn-submit"><i class="material-icons">send</i> Send Message</button>
             </div>
           </div>
         </form>
@@ -64,7 +64,7 @@
         <h5 class="border-bottom border-primary">Our Store</h5>
           <h5 class="mt-3"> Call Us / WhatsApp</h5>
           <p>
-            <a href="tel:+38072312333"><i class="material-icons" style="margin-right: 3px">perm_phone_msg</i> +380-723-123-33 </a>
+            <a href="tel:+38072312333"><i class="material-icons" style="margin-right: 3px">perm_phone_msg</i>+380-723-123-33 </a>
           </p>
           <h5>Email / Website</h5>
           <p>
