--- a/src/app/src/app/pages/home/home-page.component.html
+++ b/src/app/src/app/pages/home/home-page.component.html
@@ -1,3 +1,13 @@
+<div class="home-pic d-flex">
+  <div class="text-center justify-content-center">
+    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
+    <button routerLink="/inventory" class="btn btn-primary rounded-pill mt-5">Let's GO</button>
+  </div>
+</div>
+
+
+
+
 <div class="container mt-3">
   <div class="d-flex bg-light justify-content-center align-items-center" style="height: 300px">
   <h3><a routerLink="/inventory">Future Products</a></h3>
@@ -5,7 +15,7 @@
 </div>
 <div class="container mt-3">
   <div class="d-flex bg-light justify-content-center align-items-center" style="height: 300px">
-  <h3><a routerLink="/about-us">Company info</a></h3>
+  <h3><a routerLink="/contact-us">Company info</a></h3>
   </div>
 </div>
 <div class="container mt-3 my-3">
