--- a/src/app/src/app/pages/product-details/product-details-page.component.html
+++ b/src/app/src/app/pages/product-details/product-details-page.component.html
@@ -24,10 +24,10 @@
         </div>
       </div>
       <div class="row add-to-cart">
-        <div class="col-md-2">
-          <input class="btn-lg" type="number" value="1" style="width: 75px">
+        <div class="col-md-3">
+          <input class="btn-lg" type="number" min="1" value="1" style="width: 100px">
         </div>
-        <div class="col-md-10">
+        <div class="col-md-9">
           <button class="btn btn-primary btn-lg btn-brand" style="width: 150px">
             Add to Cart
           </button>
