Added cart service.

--- a/src/app/src/app/pages/home/home-page.component.html
+++ b/src/app/src/app/pages/home/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="home-pic d-flex">
   <div class="text-center justify-content-center">
     <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
-    <button routerLink="/inventory" class="btn btn-primary rounded-pill mt-5">Let's GO</button>
+    <button routerLink="/categories" class="btn btn-primary rounded-pill mt-5">Let's GO</button>
   </div>
 </div>
 
