--- a/src/app/src/app/header/header.component.html
+++ b/src/app/src/app/header/header.component.html
@@ -1,218 +1,7 @@
-
-<!--
-  <a routerLink="/">Welcome To DenSH</a>
-  <div class="float-right">
-    <a routerLink="/track-order" [routerLinkActive]="'active-link'">Track Your Order</a>
-    <a routerLink="/my-account" [routerLinkActive]="'active-link'">My-account</a>
-  </div>
-
-
-<div class="navbar">
-  <div class="container">
-    <div class="logo"><a routerLink="/"><img style="width: 50px; height: 50px" [src]="'/assets/logo.svg'"></a></div>
-
-    <a routerLink="/">Home</a>
-    <a routerLink="/categories" [routerLinkActive]="'active-link'">Categories</a>
-    <a routerLink="/inventory" [routerLinkActive]="'active-link'">Shop</a>
-    <a routerLink="/contact-us" [routerLinkActive]="'active-link'">Contact Us</a>
-
-    <div class="support">
-      <div class="support__container d-flex align-items-center">
-        <img class="support__img" [src]="'/assets/support.svg'">
-        <div class="support__text">
-          <b>Support</b> (+380) 78 120 634
-          <br>
-          <b>E-mail:</b> info@densh.com
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
-<form class="search">
-  <div class="form-box">
-    <input type="text" class="search-field business" placeholder="Enter you are looking for">
-    <button class="search-btn" type="button">Search</button>
-  </div>
-</form>
--->
-
-<!--
-<div class="d-flex  border-bottom">
-  <div class="container-fluid bg-light ">
-    <div class="row">
-      <div class="col-12">
-        <ul class="float-left">
-          <li class="top__menu "><a class="menu__links" routerLink="#">Welcome to DenSH Store</a></li>
-        </ul>
-       <ul class="float-right ">
-        <li class="top__menu "><a class="menu__links" routerLink="/track-order">Track Your Order</a></li>
-        <li class="top__menu"><a class="menu__links" routerLink="/my-account">My Account</a></li>
-       </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="d-flex">
-  <div class="container-fluid bg-dark text-white">
-    <div class="row">
-      <div class="col-12">
-        <ul class="float-left">
-          <li> <a>LOGO</a></li>
-        </ul>
-        <ul class="float-right">
-          <li><a>Link 1</a></li>
-          <li><a>Link 2</a></li>
-          <li><a>Link 3</a></li>
-          <li><a>Link 4</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>-->
-
-
-<!--
-
-<div class="col-3 navbar-brand ">
-  <a href="#"><img [src]="'/assets/logo.png'" style="height: 30px; width: 30px"><span style="padding-left: 10px">Den</span><span>SH</span> </a>
-</div>
-<div class="col-2 align-self-center"><a href="#">HOME</a></div>
-<div class="col-2 align-self-center"><a href="#">HOME</a></div>
-<div class="col-2 align-self-center"><a href="#">HOME</a></div>
-<div class="col-2 align-self-center"><a href="#">HOME</a></div>
-
--->
-
-<!--
-<div class="container">
-  <div class="row">
-      <div class="col-12 navbar-brand">
-        <img [src]="'/assets/logo.png'" style="width: 30px; height: 30px">
-        <span style="color: blue">Den</span><span style="color: #ffe812">SH</span>
-      </div>
-        <ul class="float-right">
-          <li class="top__menu"><a class="menu__links">Home 1</a> </li>
-          <li class="top__menu"><a class="menu__links">Home sda1</a> </li>
-          <li class="top__menu"><a class="menu__links">Home asdasd1</a> </li>
-          <li class="top__menu"><a class="menu__links">Home asd1</a> </li>
-        </ul>
-      </div>
-    </div>-->
-
-
-<!--
- Responsive Menu Trying
--->
-<!--<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <br/>
-      <nav class="navbar navbar-dark bg-dark">
-        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse"
-        data-target="#CollapseNavbar">
-          &#9776;
-        </button>
-        <div class="collapse" id="CollapseNavbar">
-          <a class="navbar-brand">LOGO</a>
-          <ul class="nav navbar-nav">
-            <li class="nav-item">Home 1</li>
-            <li class="nav-item">Home 2</li>
-            <li class="nav-item">Home 3</li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-  </div>
-</div>-->
-
-
-<!--
-Responsive menu
--->
-<!--
-
-<div class="mobile-header d-block">
-  <div class="collapse" id="collapsingMenuToggle">
-    <div class="d-flex">
-      <div class="row align-self-center">
-        <div class="col-3"><a routerLink="/" class="font-weight-500 text-decoration-none">Home</a></div>
-        <div class="col-3"><a routerLink="/" class="font-weight-500 text-decoration-none">Home</a></div>
-        <div class="col-3"><a routerLink="/" class="font-weight-500 text-decoration-none">Home</a></div>
-        <div class="col-3"><a routerLink="/" class="font-weight-500 text-decoration-none">Home</a></div>
-      </div>
-    </div>
-  </div>
-</div>
-<nav class="navbar navbar-light border-bottom">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingMenuToggle" aria-controls="collapsingMenuToggle" aria-expanded="false" aria-label="Toggle navigator">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-</nav>
--->
-
-<!--
-
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"/>
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img [src]="'/assets/logo.png'" style="height: 50px; width: 70px" alt="Logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    &lt;!&ndash; navbar1 &ndash;&gt;
-    <div class="collapse navbar-collapse flex-column align-items-start" id="navbarCollapse">
-
-      <ul class="navbar-nav mt-0">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/inventory">Shop</a>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link" href="/categories">Categories</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contact-us">Contact Us</a>
-        </li>
-      </ul>
-
-    </div>
-    <div class="collapse navbar-collapse flex-column align-items-start" id="navbarCollapse">
-
-      &lt;!&ndash; navbar2 &ndash;&gt;
-
-      <div class="navbar-nav mb-lg-0">
-        <a class="nav-item nav-link" routerLink="/track-order">Track Your Order</a>
-        <a class="nav-item nav-link" routerLink="/my-account">My-Account</a>
-
-      </div>
-    </div>
-    <div class="search-container">
-      <form action="/action_page.php">
-        <input type="text" placeholder="Search.." name="search">
-        <button type="submit">
-          <i class="fa fa-search"></i></button>
-      </form>
-    </div>
-  </div>
-</nav>
-
--->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand mr-5" href="#">DenSH</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark font-weight-bold">
+  <a class="navbar-brand mr-5" href="/">DenSH</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -224,20 +13,24 @@ Responsive menu
       <li class="nav-item">
         <a class="nav-link" routerLink="/categories">Categories</a>
       </li>
-      
       <li class="nav-item">
         <a class="nav-link" routerLink="/contact-us">Contact Us</a>
       </li>
     </ul>
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" routerLink="/track-order">Track Order</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/my-account">My Account</a>
       </li>
-      <li class="nav-item mx-2">
-        <a class="nav-link" routerLink="/cart"><i class="material-icons">shopping_cart</i></a>
+
+      <li class="nav-item pl-4 searchbar__icons">
+        <a class="nav-link icon-item text-decoration-none position-relative" routerLink="/cart">
+          <i class="icon material-icons">shopping_cart</i>
+          <span class="cart-items-count" *ngIf="cartService">{{cartService.itemsCount}}</span>
+          <span class="font-weight-500 ml-4">{{!cartService.totalPrice ? '0.00' : cartService.totalPrice }}$</span>
+        </a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0 ml-3">
