--- a/src/app/src/app/header/header.component.scss
+++ b/src/app/src/app/header/header.component.scss
@@ -1,144 +1,21 @@
-/*
-.active-link {
-  color: black !important;
-  background-color: yellow;
-}
+.icon-item {
+    display: flex;
+    align-items: center;
 
-.header {
-  overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 0px 20px 0px;
-
-  a {
-    float: left;
+  }
+  .cart-items-count {
+    background-color: #333e48 ;
+    color: #fff !important;
+    left: 22px;
+    position: absolute;
+    font-size: 0.75em;
+    line-height: 1.75em;
+    font-weight: 700;
+    width: 1.75em;
     text-align: center;
-    padding: 2px;
-    text-decoration: none;
-    line-height: 20px;
-    border-radius: 8px;
-    margin-right: 20px;
-    color: #334141;
-    font-size: .9em;
+    border-radius: 50%;
+    top: -5px;
 
-    &:hover{
-      background-color: #ddd;
-      color: black;
-    }
   }
-}
 
 
-!* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other *!
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .header-right {
-    float: none;
-  }
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: #4bd3c8;
-  font-family: "Arial";
-  padding: 20px;
-
-}
-.navbar a:hover{
-  background-color: #ddd;
-  color: black;
-}
-
-.navbar a {
-  float: left;
-  color: black;
-  font-weight: bold;
-  text-align: center;
-  padding: 2px;
-  text-decoration: none;
-  font-size: 16px;
-  line-height: 20px;
-  border-radius: 8px;
-  margin-right: 0px 10px;
-}
-
-.logo {
-  a:hover{
-    background-color: #4bd3c8;
-  }
-  margin-left: 0px;
-  min-width: 100px !important;
-  display: flex;
-}
-
-.support__img{
-  height: 40px;
-}
-
-.support__text {
-  color: #333e48;
-  font-size: 0.9em;
-  line-height: 1.714em;
-  text-align: center;
-}
-
-.search{
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #80556a;
-}
-
-.search-field{
-  height: 40px;
-  padding: -10px;
-  border-radius: 15px;
-  outline: none;
-  text-align: center;
-  font-size: 20px;
-}
-
-.business{
-  width: 500px;
-  margin-right: 5px;
-}
-
-.search-btn{
-  height: 40px;
-  width: 100px;
-  font-size: 20px;
-  text-align: center;
-  background: #ffeb3b;
-  border-radius: 15px;
-    &:hover{
-       background: #ffc107;
-       cursor: pointer;
-}
-}
-
-.d-flex{
-  background: #b8c4d3;
-  height: px;
-  font-family: "Apple Color Emoji";
-  font-size: 16px;
-  letter-spacing: 1px;
-}
-.top__menu{
-  display: inline;
-  margin-right: 30px;
-}
-
-.menu__links{
-  color: black;
-  text-decoration: none;
-
-    &:hover{
-      background: #dddddd;
-      border-radius: 8px;
-    }
-}
-*/
