--- a/src/app/src/app/pages/app-pages.component.html
+++ b/src/app/src/app/pages/app-pages.component.html
@@ -1,5 +1,6 @@
 <div class="app-container">
-  <app-header-component></app-header-component>
+  <app-header-component>
+  </app-header-component>
   <div class="app-content">
     <router-outlet></router-outlet>
   </div>
