--- a/src/app/src/app/pages/cart/cart-page.component.html
+++ b/src/app/src/app/pages/cart/cart-page.component.html
@@ -1,1 +1,44 @@
-Cart Page
+<div class="container">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb my-2 px-0 bg-white">
+      <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Cart</li>
+    </ol>
+  </nav>
+</div>
+
+<div class="container mb-3" *ngIf="cartService.itemsCount > 0">
+  <div class="d-flex flex-row w-100 py-3 border-bottom" *ngFor="let item of cartService.getItems">
+    <div class="d-flex align-items-center pr-3">
+      <i class="icon material-icons" (click)="cartService.removeItem(item.id)">close</i>
+    </div>
+    <div class="d-flex align-items-center pr-4 product__img">
+      <img [src]="item.imageUrl" style="width: 100px; height: 100px">
+    </div>
+    <div class="d-flex align-items-center flex-grow-1">
+      <a [routerLink]="'/product/' + item.id" class="text-decoration-none">{{item.title}}</a>
+    </div>
+    <div class="d-flex align-items-center flex-grow-1">
+     {{item.description}}
+    </div>
+    <div class="d-flex align-items-center pr-3">
+      x{{!item.count ? 1 : item.count}}
+    </div>
+    <div class="d-flex align-items-center pr-3">
+      {{item.price.toFixed(2) == 0 ? 0: item.price.toFixed(2)}}$
+    </div>
+  </div>
+  <div class="d-flex">
+    <div class="p-3 w-100 text-right font-weight-500 pr-3">
+      Total: {{cartService.totalPrice}}$
+    </div>
+  </div>
+  <button class="btn btn-danger w-25 float-left rounded-pill" (click)="cartService.clearCart()">Delete All</button>
+  <button class="btn btn-success w-25 float-right rounded-pill" [routerLink]="'/checkout'">Proceed To Checkout</button>
+</div>
+
+<div class="container mb-3" *ngIf="cartService.itemsCount == 0">
+  <div class="d-flex bg-light justify-content-center align-items-center" style="height: 300px">
+    <h3>Cart is empty</h3>
+  </div>
+</div>
