--- a/src/app/src/app/pages/contact-us/contact-us-page.component.html
+++ b/src/app/src/app/pages/contact-us/contact-us-page.component.html
@@ -1,3 +1,12 @@
+<div class="container">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb my-2 px-0 bg-white">
+      <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+    </ol>
+  </nav>
+</div>
+
 <section>
   <div class="container border-bottom">
     <div class="row">
