--- a/src/app/src/app/pages/my-account/my-account-page.component.html
+++ b/src/app/src/app/pages/my-account/my-account-page.component.html
@@ -2,7 +2,7 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb my-2 px-0 bg-white">
       <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/my-account">My Account</a></li>
+      <li class="breadcrumb-item active" aria-current="page">My Account</li>
     </ol>
   </nav>
 </div>
