--- a/src/app/src/app/pages/track-order/track-order-page.component.html
+++ b/src/app/src/app/pages/track-order/track-order-page.component.html
@@ -29,7 +29,7 @@
           <div class="form-row mt-4">
             <div class="form-group col-md-12">
               <h6>Your Phone Number</h6>
-              <input type="text" class="form-control" placeholder="Enter Your Phone Number *">
+              <input type="tel" name="phone" class="form-control" placeholder="Enter Your Phone Number *">
             </div>
           </div>
           <button type="submit" class="btn btn-primary mb-3">Search</button>
