--- a/src/app/src/app/header/header.component.html
+++ b/src/app/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark font-weight-bold">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark font-weight-bold"  >
   <a class="navbar-brand mr-5" href="/">DenSH</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,15 +25,15 @@
         <a class="nav-link" routerLink="/my-account">My Account</a>
       </li>
 
-      <li class="nav-item pl-4 searchbar__icons">
+      <li class="nav-item pl-4 searchbar__icons" >
         <a class="nav-link icon-item text-decoration-none position-relative" routerLink="/cart">
           <i class="icon material-icons">shopping_cart</i>
-          <span class="cart-items-count" *ngIf="cartService">{{cartService.itemsCount}}</span>
-          <span class="font-weight-500 ml-4">{{!cartService.totalPrice ? '0.00' : cartService.totalPrice }}$</span>
+          <span class="cart-items-count">{{cartService.itemsCount}}</span>
+          <span class="font-weight-500 ml-4">{{!cartService.totalPrice ? '0.00' : cartService.totalPrice }} $</span>
         </a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0 ml-3">
+    <form class="form-inline my-2 my-lg-0 ml-3" >
       <input class="form-control mr-sm-2" type="search" placeholder="Search.." aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
