--- a/src/app/src/app/pages/cart/cart-page.component.html
+++ b/src/app/src/app/pages/cart/cart-page.component.html
@@ -8,9 +8,26 @@
 </div>
 
 <div class="container mb-3" *ngIf="cartService.itemsCount > 0">
-  <div class="d-flex flex-row w-100 py-3 border-bottom" *ngFor="let item of cartService.getItems">
+  <div class="continer">
+  <div class="d-flex flex-row w-100 py-3 border-bottom">
+    <div class="d-flex align-items-center flex-grow-1 ml-5 w-25 float-right">
+      Products
+    </div>
+    <div class="d-flex align-items-center flex-grow-1 pl-5 w-25 ">
+      Descriprion
+    </div>
     <div class="d-flex align-items-center pr-3">
-      <i class="icon material-icons" (click)="cartService.removeItem(item.id)">close</i>
+      Count
+    </div>
+    <div class="d-flex align-items-center pr-3">
+      Price
+    </div>
+  </div>
+  </div>
+  <div class="d-flex flex-row w-100 py-3 border-bottom" *ngFor="let item of cartService.getItems">
+
+    <div class="d-flex align-items-center pr-3">
+      <i class="icon material-icons"  title="Remove item" (click)="cartService.removeItem(item.id)">close</i>
     </div>
     <div class="d-flex align-items-center pr-4 product__img">
       <img [src]="item.imageUrl" style="width: 100px; height: 100px">
@@ -30,7 +47,7 @@
   </div>
   <div class="d-flex">
     <div class="p-3 w-100 text-right font-weight-500 pr-3">
-      Total: {{cartService.totalPrice}}$
+      Total: {{cartService.totalPrice}} $
     </div>
   </div>
   <button class="btn btn-danger w-25 float-left rounded-pill" (click)="cartService.clearCart()">Delete All</button>
