--- a/src/app/src/app/pages/home/home-page.component.html
+++ b/src/app/src/app/pages/home/home-page.component.html
@@ -32,32 +32,146 @@
   </div>
 </div>
 
-<div class="container mt-5">
-  <h2 class="content-title mb-2">New Arrivals</h2>
-  <div class="products-carousel owl-carousel owl-theme" >
-    <div class="item" *ngFor="let item of products">
-      <a class="text-decoration-none category-item" [routerLink]="'/inventory/' + item.productId">
-        <div class="img-wrap">
-          <img
-            [src]="'https://source.unsplash.com/random/1920x1080'">
+<!--
+<div class="container my-2">
+  <h2 class="content-title mb-2 border-bottom border-primary">New Arrivals</h2>
+  <div class="row">
+    <div class="col-12 col-md-4 mt-3" *ngFor="let item of products | slice: 0: 3">
+      <div class="card border border-danger">
+        <a [routerLink]="'/product/' + item.productId">
+          <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
+               alt="Card image cap">
+        </a>
+        <div class="card-body text-center">
+          <a>
+            <h5 class="card-title">{{item.title}}</h5>
+          </a>
+          <p class="card-text">{{item.description}}</p>
         </div>
-        <h6 class="mt-1">{{item.title}}</h6>
-      </a>
+      </div>
     </div>
+  </div>
+</div>
+-->
+
+<div class="container mt-0 mb-2">
+  <h2 class="content-title mb-2 border-bottom border-primary">Categories</h2>
+  <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="row">
+          <div class="col-12 col-md-4 mt-3" *ngFor="let item of categories | slice: 0: 3">
+            <div class="card border border-danger">
+              <a [routerLink]="'/inventory/' + item.id">
+                <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
+                     alt="Card image cap">
+              </a>
+              <div class="card-body text-center">
+                <a>
+                  <h5 class="card-title">{{item.title}}</h5>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+          <div class="col-12 col-md-4 mt-3" *ngFor="let item of categories | slice: 3: 6">
+            <div class="card border border-danger">
+              <a [routerLink]="'/inventory/' + item.id">
+                <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
+                     alt="Card image cap">
+              </a>
+              <div class="card-body text-center">
+                <a>
+                  <h5 class="card-title">{{item.title}}</h5>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
 
-<div class="container mb-5 mt-5">
-  <h2 class="content-title mb-2">Categories</h2>
-  <div class="categories-carousel owl-carousel owl-theme" >
-    <div class="item" *ngFor="let item of categories">
-      <a class="text-decoration-none category-item" [routerLink]="'/inventory/' + item.id">
-        <div class="img-wrap">
-          <img
-            [src]="'https://source.unsplash.com/random/1920x1080'">
+<!--
+Products carousel
+-->
+<div class="container mt-3">
+  <h2 class="content-title mb-2 border-bottom border-primary">New Arrivals</h2>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+
+        <div class="row">
+          <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 0: 4">
+            <div class="card border border-danger">
+              <a [routerLink]="'/product/' + item.productId">
+                <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
+                     alt="Card image cap">
+              </a>
+              <div class="card-body text-center">
+                <a>
+                  <h5 class="card-title">{{item.title}}</h5>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
-        <h6 class="mt-1">{{item.title}}</h6>
-      </a>
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+          <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 4: 8">
+            <div class="card border border-danger">
+              <a [routerLink]="'/product/' + item.productId">
+                <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
+                     alt="Card image cap">
+              </a>
+              <div class="card-body text-center">
+                <a>
+                  <h5 class="card-title">{{item.title}}</h5>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+          <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 8: 12">
+            <div class="card border border-danger">
+              <a [routerLink]="'/product/' + item.productId">
+                <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
+                     alt="Card image cap">
+              </a>
+              <div class="card-body text-center">
+                <a>
+                  <h5 class="card-title">{{item.title}}</h5>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
+
