--- a/src/app/src/app/pages/contact-us/contact-us-page.component.html
+++ b/src/app/src/app/pages/contact-us/contact-us-page.component.html
@@ -64,7 +64,7 @@
           </div>
           <div class="form-row">
             <div class="form-group col-md-12 text-center">
-              <button type="submit" class="btn btn-primary btn-submit"><i class="material-icons">send</i> Send Message</button>
+              <button type="submit" class="btn btn-primary btn-submit" disabled><i class="material-icons">send</i> Send Message</button>
             </div>
           </div>
         </form>
