--- a/src/app/src/app/header/header.component.html
+++ b/src/app/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark font-weight-bold"  >
-  <a class="navbar-brand mr-5" href="/">DenSH</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark font-weight-bold">
+  <a class="navbar-brand mx-5" href="/">DenSH</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,66 +7,41 @@
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item mx-3">
         <a class="nav-link" routerLink="/">Home </a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item mx-3">
         <a class="nav-link" routerLink="/categories">Categories</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item mx-3">
         <a class="nav-link" routerLink="/contact-us">Contact Us</a>
       </li>
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item mx-3">
         <a class="nav-link" routerLink="/track-order">Track Order</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item mx-3">
         <a class="nav-link" routerLink="/my-account">My Account</a>
       </li>
-
-      <li class="nav-item pl-4 searchbar__icons" >
-        <a class="nav-link icon-item text-decoration-none position-relative" [routerLink]="'/cart'" >
+      <li class="nav-item pl-4 searchbar__icons">
+        <a class="nav-link icon-item text-decoration-none position-relative" [routerLink]="'/cart'">
           <i class="icon material-icons">shopping_cart</i>
           <span class="cart-items-count">{{cartService.itemsCount}}</span>
           <span class="font-weight-500 ml-4">{{!cartService.totalPrice ? '0.00' : cartService.totalPrice }} $</span>
         </a>
       </li>
-     <!-- <li class="nav-item" >
-        <input class="mr-2" type="text" [(ngModel)]="search" >
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </li>-->
-      <div class="dropdown" >
-        <input class="form-control mr-sm-2" type="text" [(ngModel)]="search">
-        <div *ngFor="let product of products | filter:search" [hidden]="search == ''"
-             class="dropdown-content ">
-
-          <a [routerLink]="'/product/' + product.productId">{{product.title}}</a>
+      <div class="dropdown position-relative">
+        <input class="form-control mr-sm-2" type="search" [(ngModel)]="search">
+        <div class="d-flex flex-column position-absolute">
+          <div *ngFor="let product of products | filter:search" [hidden]="search == ''" class="dropdown-content ">
+            <a [routerLink]="'/product/' + product.productId">{{product.title}} | {{product.price | currency}}</a>
+          </div>
         </div>
       </div>
     </ul>
-<!--
-    <form class="form-inline my-2 my-lg-0 ml-3" >
--->
-     <!-- <input class="form-control mr-sm-2 w-25" type="text" [(ngModel)]="search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="showSearchResult()">Search</button>-->
-<!--
-    </form>
--->
   </div>
-
 </nav>
-<!--
-
-<div class="dropdown" >
-  <input class="form-control mr-sm-2" type="text" [(ngModel)]="search">
-  <div *ngFor="let product of products | filter:search"
-       class="dropdown-content " [hidden]="search == ''">
-
-    <a [routerLink]="'/product/' + product.productId">{{product.title}}</a>
-  </div>
-</div>
--->
 
 
 
