--- a/src/app/src/app/pages/cart/cart-page.component.html
+++ b/src/app/src/app/pages/cart/cart-page.component.html
@@ -8,41 +8,30 @@
 </div>
 
 <div class="container mb-3" *ngIf="cartService.itemsCount > 0">
-  <div class="continer">
-  <div class="d-flex flex-row w-100 py-3 border-bottom">
-    <div class="d-flex align-items-center flex-grow-1 ml-5 w-25 float-right">
-      Products
-    </div>
-    <div class="d-flex align-items-center flex-grow-1 pl-5 w-25 ">
-      Descriprion
-    </div>
-    <div class="d-flex align-items-center pr-3">
-      Count
-    </div>
-    <div class="d-flex align-items-center pr-3">
-      Price
-    </div>
-  </div>
-  </div>
   <div class="d-flex flex-row w-100 py-3 border-bottom" *ngFor="let item of cartService.getItems">
-
     <div class="d-flex align-items-center pr-3">
-      <i class="icon material-icons"  title="Remove item" (click)="cartService.removeItem(item.id)">close</i>
+      <i class="icon material-icons" title="Remove item" (click)="cartService.removeItem(item.id)">close</i>
     </div>
     <div class="d-flex align-items-center pr-4 product__img">
-      <img [src]="item.imageUrl" style="width: 100px; height: 100px">
+      <img [src]="item.externalImages" style="width: 100px; height: 100px">
     </div>
     <div class="d-flex align-items-center flex-grow-1">
       <a [routerLink]="'/product/' + item.id" class="text-decoration-none">{{item.title}}</a>
     </div>
     <div class="d-flex align-items-center flex-grow-1">
-     {{item.description}}
+      {{item.make}}
+    </div>
+    <div class="d-flex align-items-center flex-grow-1">
+      {{item.model}}
+    </div>
+    <div class="d-flex align-items-center flex-grow-1">
+      {{item.year}}
     </div>
     <div class="d-flex align-items-center pr-3">
       x{{!item.count ? 1 : item.count}}
     </div>
     <div class="d-flex align-items-center pr-3">
-      {{item.price.toFixed(2) == 0 ? 0: item.price.toFixed(2)}}$
+      {{item.price.toFixed(2) == 0 ? 0 : item.price.toFixed(2)}}$
     </div>
   </div>
   <div class="d-flex">
