--- a/src/app/src/app/pages/home/home-page.component.html
+++ b/src/app/src/app/pages/home/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="home-pic d-flex">
   <div class="text-center justify-content-center">
     <h2>Welcome to <span class="text-danger">DenSH</span></h2>
-    <button routerLink="/categories" class="btn btn-primary rounded-pill mt-5">Let's GO</button>
+    <button routerLink="/categories" class="btn btn-primary animatedButton mt-5 w-50">Let's GO</button>
   </div>
 </div>
 
@@ -31,29 +31,6 @@
     </div>
   </div>
 </div>
-
-<!--
-<div class="container my-2">
-  <h2 class="content-title mb-2 border-bottom border-primary">New Arrivals</h2>
-  <div class="row">
-    <div class="col-12 col-md-4 mt-3" *ngFor="let item of products | slice: 0: 3">
-      <div class="card border border-danger">
-        <a [routerLink]="'/product/' + item.productId">
-          <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
-               alt="Card image cap">
-        </a>
-        <div class="card-body text-center">
-          <a>
-            <h5 class="card-title">{{item.title}}</h5>
-          </a>
-          <p class="card-text">{{item.description}}</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
--->
-
 <div class="container mt-0 mb-2">
   <h2 class="content-title mb-2 border-bottom border-primary">Categories</h2>
   <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
@@ -61,7 +38,7 @@
       <div class="carousel-item active">
         <div class="row">
           <div class="col-12 col-md-4 mt-3" *ngFor="let item of categories | slice: 0: 3">
-            <div class="card border border-danger">
+            <div class="card border border-danger zoom">
               <a [routerLink]="'/inventory/' + item.id">
                 <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
                      alt="Card image cap">
@@ -78,7 +55,7 @@
       <div class="carousel-item">
         <div class="row">
           <div class="col-12 col-md-4 mt-3" *ngFor="let item of categories | slice: 3: 6">
-            <div class="card border border-danger">
+            <div class="card border border-danger zoom">
               <a [routerLink]="'/inventory/' + item.id">
                 <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
                      alt="Card image cap">
@@ -115,7 +92,7 @@ Products carousel
 
         <div class="row">
           <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 0: 4">
-            <div class="card border border-danger">
+            <div class="card border border-danger zoom">
               <a [routerLink]="'/product/' + item.productId">
                 <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
                      alt="Card image cap">
@@ -132,7 +109,7 @@ Products carousel
       <div class="carousel-item">
         <div class="row">
           <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 4: 8">
-            <div class="card border border-danger">
+            <div class="card border border-danger zoom">
               <a [routerLink]="'/product/' + item.productId">
                 <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
                      alt="Card image cap">
@@ -149,7 +126,7 @@ Products carousel
       <div class="carousel-item">
         <div class="row">
           <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 8: 12">
-            <div class="card border border-danger">
+            <div class="card border border-danger zoom">
               <a [routerLink]="'/product/' + item.productId">
                 <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.imageUrl"
                      alt="Card image cap">
