--- a/src/app/src/app/pages/home/home-page.component.scss
+++ b/src/app/src/app/pages/home/home-page.component.scss
@@ -8,3 +8,16 @@
   text-align: center;
   flex-direction: column;
 }
+
+.zoom:hover {
+  transform: scale(0.9);
+}
+
+.animatedButton {
+  border-radius: 4px;
+  transition: border-radius 0.5s ease-in;
+}
+
+.animatedButton:hover {
+border-radius: 16px;
+}
