--- a/src/app/src/app/pages/my-account/my-account-page.component.html
+++ b/src/app/src/app/pages/my-account/my-account-page.component.html
@@ -28,7 +28,7 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label">Remember me</label>
           </div>
-          <button type="submit" class="btn btn-primary mb-3">Submit</button>
+          <button type="submit" class="btn btn-primary mb-3" disabled>Submit</button>
         </form>
       </div>
 
@@ -43,7 +43,7 @@
             </div>
             <p>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy.</p>
           </div>
-          <button type="submit" class="btn btn-primary mb-3">Register</button>
+          <button type="submit" class="btn btn-primary mb-3" disabled>Register</button>
         </form>
         <ul class="float-left">
           Sign up today and you will be able to :
