--- a/src/app/src/app/pages/track-order/track-order-page.component.html
+++ b/src/app/src/app/pages/track-order/track-order-page.component.html
@@ -20,7 +20,7 @@
               <input type="text" class="form-control" placeholder="Enter Your Order ID *">
             </div>
           </div>
-          <button type="submit" class="btn btn-primary mb-3">Search</button>
+          <button type="submit" class="btn btn-primary mb-3" disabled>Search</button>
         </form>
       </div>
       <div class="col-md-6">
@@ -32,7 +32,7 @@
               <input type="tel" name="phone" class="form-control" placeholder="Enter Your Phone Number *">
             </div>
           </div>
-          <button type="submit" class="btn btn-primary mb-3">Search</button>
+          <button type="submit" class="btn btn-primary mb-3" disabled>Search</button>
         </form>
       </div>
     </div>
